--- a/src/properties/jdbc.properties
+++ b/src/properties/jdbc.properties
@@ -5,5 +5,5 @@
 #jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/forms
 jdbc.user=root
-jdbc.password=325413
+jdbc.password=abcd@1234
 jdbc.driver=com.mysql.jdbc.Driver
